# rust_wasm_game_dev

./: .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json  webpack.config.js
examples/: strum.rs
js/: index.js
src/: archv.rs  brwsr.rs  engn.rs  game.rs  lib.rs
src/game/: red_hat_boy_states.rs
static/: index.html  rhb.json
tests/: app.rs
